<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SkyBlue"
    tools:context=".FirstActivity"
    tools:showIn="@layout/first_page"
    android:orientation="vertical">


    <TextView
        android:id="@+id/first_page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/enter_money"
        android:textColor="@color/White"
        android:textSize="35dp"
        android:layout_gravity="center"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/first_page_second_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_money_second"
        android:textColor="@color/White"
        android:textSize="35dp"
        android:textAllCaps="false"/>

    <EditText
        android:id="@+id/edit_first_page"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/transparent_button"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        android:textSize="30dp"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/enter_first_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/for_first_button"
        android:padding="10dp"
        android:text="@string/button"
        android:textColor="@color/White"
        android:textSize="20dp" />

    <Button
        android:id="@+id/but_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:background="@drawable/bluegradient"
        android:text="@string/go"
        android:textColor="@color/White"
        android:textSize="20dp" />

</LinearLayout>