<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SkyBlue"
    tools:showIn="@layout/third_page">

    <ImageButton
        android:id="@+id/sp_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_home_black_24dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:id="@+id/third_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sp_home"
        android:text="@string/category"
        android:textColor="@color/White"
        android:textSize="33dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/third_category"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/LightGrey"
        android:entries="@array/spinner_category" />

    <TextView
        android:id="@+id/third_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_category"
        android:layout_centerHorizontal="true"
        android:text="@string/third"
        android:textColor="@color/White"
        android:textSize="33dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/third_page_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/third_text"
        android:layout_centerHorizontal="true"
        android:text="@string/hint_third_page"
        android:textColor="@color/Chocolate"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/third_page_hintSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/third_page_hint"
        android:layout_centerHorizontal="true"
        android:text="@string/hintSec_third_page"
        android:textColor="@color/Chocolate"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/s_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/third_page_hintSec"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/start_data"
        android:textColor="@color/White"
        android:textSize="15dp" />

    <RelativeLayout
        android:id="@+id/rv_spinners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_d"
        android:layout_centerHorizontal="true">

        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@color/LightGrey"
            android:entries="@array/spinner_day" />

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/spinner_day"
            android:background="@color/LightGrey"
            android:entries="@array/spinner_month" />

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/spinner_month"
            android:background="@color/LightGrey"
            android:entries="@array/spinner_year" />
    </RelativeLayout>

    <TextView
        android:id="@+id/s_d_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_spinners"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/finish_data"
        android:textColor="@color/White"
        android:textSize="15dp" />

    <RelativeLayout
        android:id="@+id/rv_spinners_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_d_s"
        android:layout_centerHorizontal="true">

        <Spinner
            android:id="@+id/spinner_day_second"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@color/LightGrey"
            android:entries="@array/spinner_day" />

        <Spinner
            android:id="@+id/spinner_month_second"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/spinner_day_second"
            android:background="@color/LightGrey"
            android:entries="@array/spinner_month" />

        <Spinner
            android:id="@+id/spinner_year_second"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/spinner_month_second"
            android:background="@color/LightGrey"
            android:entries="@array/spinner_year" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_third"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_below="@id/rv_spinners_second"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/for_first_button"
        android:text="@string/but_third"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/third_edit"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_below="@id/button_third"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/button_third_income"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_below="@id/third_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/for_first_button"
        android:text="@string/controlIncomeThird"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="20dp" />

    <Button
        android:id="@+id/cash_third"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_below="@id/button_third_income"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/for_first_button"
        android:text="@string/cash"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="20dp" />

</RelativeLayout>