<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SkyBlue"
    android:orientation="vertical"
    tools:showIn="@layout/second_page">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/image_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:src="@drawable/ic_view_headline_black_24dp" />

            <Button
                android:id="@+id/go_cash_for_sec"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/image_button"
                android:background="@drawable/bluegradient"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/cash"
                android:textColor="@color/White"
                android:textSize="10dp" />

            <Button
                android:id="@+id/go_income_for_sec"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/go_cash_for_sec"
                android:background="@drawable/bluegradient"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/change_income"
                android:textColor="@color/White"
                android:textSize="10dp" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/other_man"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/transparent_button"
        android:gravity="center"
        android:hint="@string/all"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        android:textSize="25dp" />

    <Button
        android:id="@+id/first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/for_first_button"
        android:padding="10dp"
        android:text="@string/button"
        android:textColor="@color/White"
        android:textSize="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rv_but"
        android:layout_marginTop="50dp"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/control_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/bluegradient"
        android:text="@string/controlCosts"
        android:textColor="@color/White"
        android:textSize="20dp" />

    <Button
        android:id="@+id/control_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bluegradient"
        android:text="@string/controlIncomeThird"
        android:textColor="@color/White"
        android:textSize="20dp" />

</LinearLayout>