<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Chocolate"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/SkyBlue">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="220dp"
                android:text="@string/welcome"
                android:textColor="@color/White"
                android:textSize="35dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/money"
                android:textColor="@color/Chocolate"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_below="@+id/money"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@color/LightGrey"
                android:entries="@array/spinner_val" />

            <Button
                android:id="@+id/enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/for_first_button"
                android:padding="15dp"
                android:text="@string/enter"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="25dp"
                android:textStyle="italic" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>