<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/SkyBlue">

        <ImageButton
            android:id="@+id/inc_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_home_black_24dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/fours"
            android:layout_below="@id/inc_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/fours_text"
            android:textColor="@color/White"
            android:textSize="35dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rv_fours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fours"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <Spinner
                android:id="@+id/spinner_month_f"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:background="@color/LightGrey"
                android:entries="@array/spinner_month" />

            <Spinner
                android:id="@+id/spinner_year_f"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/spinner_month_f"
                android:background="@color/LightGrey"
                android:entries="@array/spinner_year" />


            <Button
                android:id="@+id/b_fours"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_below="@+id/spinner_year_f"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/for_first_button"
                android:text="@string/but_third"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/edit_fours"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@id/b_fours"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text" />

            <TextView
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_fours"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/different"
                android:textColor="@color/White"
                android:textSize="25dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/different"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@id/d"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_fours"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/cash"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/for_first_button"
                android:text="@string/cash"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_go_spent"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_below="@id/cash"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/for_first_button"
                android:text="@string/controlCosts"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="20dp" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
